welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:3: error: not found: value estBiscuit
if (estBiscuit==false){
    ^