welcome.lessons.welcome.loopfor.LoopFor.scala.code
var x : Int=0
if (estBiscuit==false){
	avance()
	x=x+1
}else{
	prendBiscuit();
	for (i<- 0 to x)
	recule();
}
